# tamahagane

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: tests-artifacts.yml  tests.yml
docs/source/: api.rst  conf.py  index.md
scripts/: write_changelog.py
src/tamahagane/: __init__.py  resolver.py  scanner.py
tests/dummyapp/: __init__.py
tests/dummyapp/commands/: hello_world.py
tests/lazyapp/: __init__.py
tests/lazyapp/commands/: hello_world.py
tests/lazyapp/commands/ignoreme/: wanted.py
tests/lazyapp/commands/sub/: hello_sub.py
tests/unittests/: test_resolver.py  test_scanner.py  test_unchanged_decorated.py
